<resources>
    <string name="app_name">Idle Thoughts</string>
    <string name="local_filename">thoughts.txt</string>
    <string name="server_filename">thoughts-db.txt</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="no_network">status : Network Disconnected.</string>
    <string name="yes_network">status : Network Connected</string>
    <string name="account_connected">status : Account Connected.</string>
    <string name="sync_meta">status : Retrieving File Metadata&#8230;</string>
    <string name="download_file">status : Downloading Latest File&#8230;</string>
    <string name="sync_complete">status : Up to Date with server.</string>
    <string name="file_unavailable">File not present in Dropbox</string>
    <string name="exception">Exception : </string>
    <string name="edit_thoughts">edit thoughts</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
</resources>
